--- a/2022/2022.md
+++ b/2022/2022.md
@@ -1,5 +1,839 @@
 # 2022 Research Log
 
+## 2022/3/10
+
+Get the number of concurrent threads system supported:
+
+```c++
+#include <thread>
+
+unsigned int n = std::thread::hardware_concurrency();
+```
+
+## 2022/3/9
+
+I find the matrix multiplication program performance is very poor(when two 1000 * 1000 matrixs are multiplied, it will spend a lot of time), so I improve the algorithm of multi-threads matrix multiplication:
+
+```c++
+#include <iostream>
+#include <utility>
+#include <vector>
+#include <thread>
+#include <cmath>
+#include <fstream>
+
+#define DEBUG
+
+class Matrix {
+private:
+    typedef std::vector<std::vector<int>> matrix_type;
+    typedef unsigned long rank_type;
+    typedef std::vector<int> vector_type;
+    friend class PMatrix;
+    rank_type row, column;
+    matrix_type matrix;
+public:
+    explicit Matrix(matrix_type m) {
+        row = m.size();
+        column = !row ? 0 : m[0].size();
+        matrix = m;
+    }
+    Matrix(): Matrix(matrix_type()) {}
+    friend std::ifstream &operator>>(std::ifstream &input, Matrix &m) {
+        input >> m.row;
+        input >> m.column;
+        for (rank_type r = 0; r < m.row; ++r) {
+            vector_type v;
+            for (rank_type c = 0; c < m.column; ++c) {
+                int t;
+                input >> t;
+                v.push_back(t);
+            }
+            m.matrix.push_back(v);
+        }
+        return input;
+    }
+    friend std::ostream &operator<<(std::ostream &output, const Matrix &m) {
+        for (const vector_type &v : m.matrix) {
+            for (int element : v)
+                output << element << "\t";
+            output << std::endl;
+        }
+        return output;
+    }
+    Matrix operator*(const Matrix &m) const {
+        matrix_type tmp;
+        if (column == m.row) {
+            for (rank_type i = 0; i < row; ++i) {
+                vector_type v;
+                for (rank_type j = 0; j < m.column; ++j) {
+                    int element = 0;
+                    for (rank_type k = 0; k < column; ++k) {
+                        element += matrix[i][k] * m.matrix[k][j];
+                    }
+                    v.push_back(element);
+                }
+                tmp.push_back(v);
+            }
+        }
+        Matrix result(tmp);
+        return result;
+    }
+};
+
+class PMatrix: public Matrix {
+private:
+    static const unsigned long threads_num = 4;
+    static void _thread(matrix_type &result, PMatrix mA, PMatrix mB, rank_type block, rank_type start_row) {
+        for (rank_type i = start_row; i < start_row + block; ++i) {
+            vector_type v;
+            for (rank_type j = 0; j < mB.column; ++j) {
+                int element = 0;
+                for (rank_type k = 0; k < mA.column; ++k) {
+                    element += mA.matrix[i][k] * mB.matrix[k][j];
+                }
+                v.push_back(element);
+            }
+            result.push_back(v);
+        }
+    }
+public:
+    [[maybe_unused]] explicit PMatrix(const Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = m.matrix;
+    }
+    explicit PMatrix(matrix_type m): Matrix(std::move(m)) {}
+    PMatrix operator*(const PMatrix &m) const {
+        matrix_type tmp;
+        if (column == m.row) {
+            rank_type block = std::ceil((double)row / (double)threads_num);
+            std::vector<matrix_type> results(threads_num);
+            std::vector<std::thread> threads;
+            for (unsigned long t = 0; t < threads_num; ++t)
+                threads.emplace_back(std::thread(_thread, std::ref(results[t]), *this, m, (row - t * block >= block ? block : row - t * block), t * block));
+            for (std::thread &t : threads)
+                t.join();
+            for (matrix_type &r : results)
+                tmp.insert(tmp.end(), r.begin(), r.end());
+        }
+        PMatrix result(tmp);
+        return result;
+    }
+};
+
+class Timer {
+private:
+    std::chrono::time_point<std::chrono::steady_clock> _start, _end;
+    std::chrono::duration<double> diff{};
+public:
+    Timer() {
+        _start = std::chrono::steady_clock::now();
+        _end = _start;
+        diff = _end - _start;
+    }
+    void start() {
+        _start = std::chrono::steady_clock::now();
+    }
+    void end() {
+        _end = std::chrono::steady_clock::now();
+        diff = _end - _start;
+    }
+    double time() {
+        return diff.count();
+    }
+};
+
+int main([[maybe_unused]] int argc, [[maybe_unused]] char *argv[]) {
+    std::ifstream mA;
+    mA.open("./mA.txt", std::ios::in);
+    std::ifstream mB;
+    mB.open("./mB.txt", std::ios::in);
+    Timer timer;
+    Matrix A;
+    Matrix B;
+    mA >> A;
+    mB >> B;
+#ifdef DEBUG
+    std::cout << "Matrix A:" << std::endl;
+    std::cout << A;
+    std::cout << "Matrix B:" << std::endl;
+    std::cout << B;
+#endif
+    timer.start();
+    Matrix R = A * B;
+    timer.end();
+#ifdef DEBUG
+    std::cout << "Result:" << std::endl;
+    std::cout << R;
+#endif
+    std::cout << "Time: " << timer.time() << std::endl;
+    PMatrix pA = (PMatrix)A;
+    PMatrix pB = (PMatrix)B;
+    timer.start();
+    PMatrix pR = pA * pB;
+    timer.end();
+#ifdef DEBUG
+    std::cout << "P Result:" << std::endl;
+    std::cout << pR;
+#endif
+    std::cout << "P Time: " << timer.time() << std::endl;
+    return 0;
+}
+```
+
+Improve point:
+
+Parallelized method in version 1 will use *n* threads to compute one element in result. It will execute *create-join* operation *matrixA.row \* matrixB.column \* n* times.
+
+But in version 2, matrixA is divided into *n* small matrix, and one thread compute the multiplication of every small matrix and matrixB.
+
+***Benchmark***:
+
+| **row/column** | **time(1 thread)** | **time(4 threads)** | **time(8 threads)** |
+| -------------- | ------------------ | ------------------- | ------------------- |
+| **10**         | 0.000039554        | 0.000390017         | 0.000522796         |
+| **20**         | 0.000133721        | 0.000360164         | 0.000447025         |
+| **30**         | 0.000329015        | 0.000494832         | 0.000562465         |
+| **40**         | 0.000645744        | 0.000647674         | 0.000681134         |
+| **50**         | 0.00114985         | 0.000851287         | 0.000950188         |
+| **60**         | 0.00191395         | 0.00107704          | 0.00123167          |
+| **70**         | 0.00283829         | 0.00151404          | 0.0015221           |
+| **80**         | 0.0040848          | 0.00193485          | 0.00190089          |
+| **90**         | 0.00565676         | 0.00247712          | 0.00235211          |
+| **100**        | 0.00753642         | 0.0031971           | 0.00268168          |
+| **500**        | 0.960772           | 0.269345            | 0.145958            |
+| **1000**       | 11.9551            | 3.22906             | 1.93215             |
+| **2000**       | 134.269            | 35.539              | 18.0095             |
+
+![pic1](./pic/2022030901.jpg)
+
+![pic2](./pic/2022030902.jpg)
+
+## 2022/3/8
+
+Repair the matrix multiplication program:
+
+```c++
+#include <iostream>
+#include <utility>
+#include <vector>
+#include <thread>
+#include <cmath>
+#include <fstream>
+
+class Matrix {
+private:
+    typedef std::vector<std::vector<int>> matrix_type;
+    typedef unsigned long rank_type;
+    typedef std::vector<int> vector_type;
+    friend class PMatrix;
+    rank_type row, column;
+    matrix_type matrix;
+public:
+    explicit Matrix(matrix_type m) {
+        row = m.size();
+        column = !row ? 0 : m[0].size();
+        matrix = m;
+    }
+    Matrix(): Matrix(matrix_type()) {}
+    friend std::ifstream &operator>>(std::ifstream &input, Matrix &m) {
+        input >> m.row;
+        input >> m.column;
+        for (rank_type r = 0; r < m.row; ++r) {
+            vector_type v;
+            for (rank_type c = 0; c < m.column; ++c) {
+                int t;
+                input >> t;
+                v.push_back(t);
+            }
+            m.matrix.push_back(v);
+        }
+        return input;
+    }
+    friend std::ostream &operator<<(std::ostream &output, const Matrix &m) {
+        for (const vector_type &v : m.matrix) {
+            for (int element : v)
+                output << element << "\t";
+            output << std::endl;
+        }
+        return output;
+    }
+    Matrix operator*(const Matrix &m) const {
+        matrix_type tmp;
+        if (column == m.row) {
+            for (rank_type i = 0; i < row; ++i) {
+                vector_type v;
+                for (rank_type j = 0; j < m.column; ++j) {
+                    int element = 0;
+                    for (rank_type k = 0; k < column; ++k) {
+                        element += matrix[i][k] * m.matrix[k][j];
+                    }
+                    v.push_back(element);
+                }
+                tmp.push_back(v);
+            }
+        }
+        Matrix result(tmp);
+        return result;
+    }
+};
+
+std::mutex mut;
+
+class PMatrix: public Matrix {
+private:
+    static const unsigned long threads_num = 4;
+    static void _thread(int &element, PMatrix mA, PMatrix mB, rank_type i, rank_type j, rank_type k, rank_type gap) {
+        while (gap--) {
+            mut.lock();
+            element += mA.matrix[i][k] * mB.matrix[k][j];
+            mut.unlock();
+            k++;
+        }
+    }
+public:
+    [[maybe_unused]] explicit PMatrix(const Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = m.matrix;
+    }
+    explicit PMatrix(matrix_type m): Matrix(std::move(m)) {}
+    PMatrix operator*(const PMatrix &m) const {
+        matrix_type tmp;
+        if (column == m.row) {
+            for (rank_type i = 0; i < row; ++i) {
+                vector_type v;
+                for (rank_type j = 0; j < m.column; ++j) {
+                    int element = 0;
+                    rank_type gap = std::ceil((double)column / (double)threads_num);
+                    std::vector<std::thread> threads;
+                    for (unsigned long t = 0; t < threads_num; ++t) {
+                        threads.emplace_back(std::thread(_thread, std::ref(element), *this, m, i, j, t * gap, (column - t * gap >= gap) ? gap : (column - t * gap)));
+                    }
+                    for (std::thread &t : threads) {
+                        t.join();
+                    }
+                    v.push_back(element);
+                }
+                tmp.push_back(v);
+            }
+        }
+        PMatrix result(tmp);
+        return result;
+    }
+};
+
+class Timer {
+private:
+    std::chrono::time_point<std::chrono::steady_clock> _start, _end;
+    std::chrono::duration<double> diff{};
+public:
+    Timer() {
+        _start = std::chrono::steady_clock::now();
+        _end = _start;
+        diff = _end - _start;
+    }
+    void start() {
+        _start = std::chrono::steady_clock::now();
+    }
+    void end() {
+        _end = std::chrono::steady_clock::now();
+        diff = _end - _start;
+    }
+    double time() {
+        return diff.count();
+    }
+};
+
+int main([[maybe_unused]] int argc, [[maybe_unused]] char *argv[]) {
+    std::ifstream mA;
+    mA.open("/Users/gabriel/Desktop/matrix_multiplication/mA.txt", std::ios::in);
+    std::ifstream mB;
+    mB.open("/Users/gabriel/Desktop/matrix_multiplication/mB.txt", std::ios::in);
+    Timer timer;
+    Matrix A;
+    Matrix B;
+    mA >> A;
+    mB >> B;
+    std::cout << "Matrix A:" << std::endl;
+    std::cout << A;
+    std::cout << "Matrix B:" << std::endl;
+    std::cout << B;
+    timer.start();
+    Matrix R = A * B;
+    timer.end();
+    std::cout << "Result:" << std::endl;
+    std::cout << R;
+    std::cout << "Time: " << timer.time() << std::endl;
+    PMatrix pA = (PMatrix)A;
+    PMatrix pB = (PMatrix)B;
+    timer.start();
+    PMatrix pR = pA * pB;
+    timer.end();
+    std::cout << "P Result:" << std::endl;
+    std::cout << pR;
+    std::cout << "Time: " << timer.time() << std::endl;
+    return 0;
+}
+```
+
+And write a program to generate matrix for benchmarking:
+
+```c++
+#include <iostream>
+#include <vector>
+#include <random>
+#include <fstream>
+#include <sstream>
+
+class Matrix {
+public:
+    typedef std::vector<std::vector<int>> matrix_type;
+    typedef unsigned long rank_type;
+    typedef std::vector<int> vector_type;
+private:
+    [[maybe_unused]] rank_type row, column;
+    matrix_type matrix;
+public:
+    explicit Matrix(matrix_type m) {
+        row = m.size();
+        column = !row ? 0 : m[0].size();
+        matrix = m;
+    }
+    friend std::ostream &operator<<(std::ostream &output, const Matrix &m) {
+        for (const vector_type &v : m.matrix) {
+            for (int element : v)
+                output << element << " ";
+            output << std::endl;
+        }
+        return output;
+    }
+};
+
+class MatrixGenerator {
+private:
+    int mArow, mAcolumn_mBrow, mBcolumn;
+    Matrix *mA = nullptr, *mB = nullptr;
+public:
+    MatrixGenerator(int _mArow, int _mAcolumn_mBrow, int _mBcolumn): mArow(_mArow), mAcolumn_mBrow(_mAcolumn_mBrow), mBcolumn(_mBcolumn) {
+        std::random_device r;
+        std::default_random_engine e1(r());
+        std::uniform_int_distribution<int> uniform_dist(0, 99);
+        Matrix::matrix_type mAv, mBv;
+        for (int i = 0; i < mArow; ++i) {
+            Matrix::vector_type v;
+            for (int j = 0; j < mAcolumn_mBrow; ++j)
+                v.push_back(uniform_dist(e1));
+            mAv.push_back(v);
+        }
+        for (int i = 0; i < mAcolumn_mBrow; ++i) {
+            Matrix::vector_type v;
+            for (int j = 0; j < mBcolumn; ++j)
+                v.push_back(uniform_dist(e1));
+            mBv.push_back(v);
+        }
+        mA = new Matrix(mAv);
+        mB = new Matrix(mBv);
+    }
+    ~MatrixGenerator() {
+        delete mA;
+        delete mB;
+    }
+    void save() {
+        if (mA && mB) {
+            std::ofstream fileA, fileB;
+            std::stringstream ss;
+            fileA.open("./mA.txt", std::ios::out);
+            ss << mArow << " " << mAcolumn_mBrow << std::endl;
+            ss << *mA << std::endl;
+            fileA << ss.str();
+            fileA.close();
+            ss.clear();
+            ss.str("");
+            fileB.open("./mB.txt", std::ios::out);
+            ss << mAcolumn_mBrow << " " << mBcolumn << std::endl;
+            ss << *mB << std::endl;
+            fileB << ss.str();
+            fileB.close();
+        }
+    }
+};
+
+int main([[maybe_unused]] int argc, [[maybe_unused]] char * argv[]) {
+    int mArow, mAcolumn_mBrow, mBcolumn;
+    std::cout << "Input Matrix A - row: ";
+    std::cin >> mArow;
+    std::cout << "Input Matrix A - column: ";
+    std::cin >> mAcolumn_mBrow;
+    std::cout << "Matrix B - row: " << mAcolumn_mBrow << std::endl;
+    std::cout << "Input Matrix B - column: ";
+    std::cin >> mBcolumn;
+    MatrixGenerator mg(mArow, mAcolumn_mBrow, mBcolumn);
+    mg.save();
+    return 0;
+}
+```
+
+TODO:
+
+Benchmarking.
+
+## 2022/3/7
+
+Test program can run rightly by deleting reference from thread function:
+
+```c++
+static void _thread(int &result, PVector v1, PVector v2, int start, unsigned long gap) {
+    while (gap--) {
+        mut.lock();
+        result += v1.vec[start] * v2.vec[start];
+        mut.unlock();
+        start++;
+    }
+}
+```
+
+Generate a thread by this:
+
+```c++
+threads.emplace_back(std::thread(_thread, std::ref(result), *this, v, i * gap, size - i * gap >= gap ? gap : size - i * gap));
+```
+
+So that it will not use any reference of object of class PVector.
+
+***Reference Page*** of `std::thread` and `std::ref`:
+
+* https://en.cppreference.com/w/cpp/thread/thread/thread
+* https://en.cppreference.com/w/cpp/utility/functional/ref
+
+## 2022/3/4
+
+A simple program can cause same error:
+
+```c++
+#include <iostream>
+#include <vector>
+#include <thread>
+#include <cmath>
+
+std::mutex mut;
+
+class PVector {
+private:
+    static const unsigned long threads_num = 2;
+    unsigned long size;
+    std::vector<int> vec;
+    static void _thread(int &result, PVector &v1, PVector &v2, int start, unsigned long gap) {
+        while (gap--) {
+            mut.lock();
+            result += v1.vec[start] * v2.vec[start];
+            mut.unlock();
+            start++;
+        }
+    }
+public:
+    explicit PVector(const std::vector<int> &v): vec(v), size(v.size()) {}
+    int operator*(const PVector &v) const {
+        int result = 0;
+        unsigned long gap = std::ceil((double)size / (double)threads_num);
+        std::vector<std::thread> threads;
+        threads.reserve(threads_num);
+        for (int i = 0; i < threads_num; ++i)
+            threads.emplace_back(std::thread(_thread, std::ref(result),std::ref(*this), std::ref(v), i * gap, size - i * gap >= gap ? gap : size - i * gap));
+        for (std::thread &t : threads)
+            t.join();
+        return result;
+    }
+};
+
+int main() {
+    PVector v1(std::vector{1, 2, 3, 4, 5, 6, 7, 8, 9});
+    PVector v2(std::vector{9, 8, 7, 6, 5, 4, 3, 2, 1});
+    int n = v1 * v2;
+    std::cout << n << std::endl;
+    return 0;
+}
+```
+
+Just using clang to compile this program:
+
+```
+In file included from ./main.cpp:3:
+/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/thread:286:5: error: attempt to use a deleted function
+    _VSTD::__invoke(_VSTD::move(_VSTD::get<1>(__t)), _VSTD::move(_VSTD::get<_Indices>(__t))...);
+    ^
+/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/__config:856:15: note: expanded from macro '_VSTD'
+#define _VSTD std::_LIBCPP_ABI_NAMESPACE
+              ^
+/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/thread:297:12: note: in instantiation of function template specialization 'std::__thread_execute<std::unique_ptr<std::__thread_struct>, void (*)(int &, PVector &, PVector &, int, unsigned long), std::reference_wrapper<int>, std::reference_wrapper<const PVector>, std::reference_wrapper<const PVector>, unsigned long, unsigned long, 2, 3, 4, 5, 6>' requested here
+    _VSTD::__thread_execute(*__p.get(), _Index());
+           ^
+/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/thread:313:54: note: in instantiation of function template specialization 'std::__thread_proxy<std::tuple<std::unique_ptr<std::__thread_struct>, void (*)(int &, PVector &, PVector &, int, unsigned long), std::reference_wrapper<int>, std::reference_wrapper<const PVector>, std::reference_wrapper<const PVector>, unsigned long, unsigned long>>' requested here
+    int __ec = _VSTD::__libcpp_thread_create(&__t_, &__thread_proxy<_Gp>, __p.get());
+                                                     ^
+./main.cpp:29:34: note: in instantiation of function template specialization 'std::thread::thread<void (&)(int &, PVector &, PVector &, int, unsigned long), std::reference_wrapper<int>, std::reference_wrapper<const PVector>, std::reference_wrapper<const PVector>, unsigned long, unsigned long, void>' requested here
+            threads.emplace_back(std::thread(_thread, std::ref(result),std::ref(*this), std::ref(v), i * gap, size - i * gap >= gap ? gap : size - i * gap));
+                                 ^
+/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/type_traits:1916:5: note: '~__nat' has been explicitly marked deleted here
+    ~__nat() = delete;
+    ^
+1 error generated.
+```
+
+TODO:
+
+Solve this problem.
+
+## 2022/3/3
+
+Matrix multiplication: (with some problems)
+
+```c++
+#include <iostream>
+#include <utility>
+#include <vector>
+#include <thread>
+#include <cmath>
+#include <fstream>
+
+class Matrix {
+private:
+    typedef std::vector<std::vector<int>> matrix_type;
+    typedef unsigned long rank_type;
+    typedef std::vector<int> vector_type;
+    friend class PMatrix;
+    rank_type row, column;
+    matrix_type matrix;
+public:
+    explicit Matrix(matrix_type m) {
+        row = m.size();
+        column = !row ? 0 : m[0].size();
+        matrix = m;
+    }
+    Matrix(): Matrix(matrix_type()) {}
+    friend std::ifstream &operator>>(std::ifstream &input, Matrix &m) {
+        input >> m.row;
+        input >> m.column;
+        for (rank_type r = 0; r < m.row; ++r) {
+            vector_type v;
+            for (rank_type c = 0; c < m.column; ++c) {
+                int t;
+                input >> t;
+                v.push_back(t);
+            }
+            m.matrix.push_back(v);
+        }
+        return input;
+    }
+    friend std::ostream &operator<<(std::ostream &output, const Matrix &m) {
+        for (const vector_type &v : m.matrix) {
+            for (int element : v)
+                output << element << "\t";
+            output << std::endl;
+        }
+        return output;
+    }
+    Matrix operator*(const Matrix &m) const {
+        matrix_type tmp;
+        if (column == m.row) {
+            for (rank_type i = 0; i < row; ++i) {
+                vector_type v;
+                for (rank_type j = 0; j < m.column; ++j) {
+                    int element = 0;
+                    for (rank_type k = 0; k < column; ++k) {
+                        element += matrix[i][k] * m.matrix[k][j];
+                    }
+                    v.push_back(element);
+                }
+                tmp.push_back(v);
+            }
+        }
+        Matrix result(tmp);
+        return result;
+    }
+};
+
+std::mutex mut;
+
+class PMatrix: public Matrix {
+private:
+    static const unsigned long threads_num = 4;
+    static void _thread(int &element, PMatrix &mA, PMatrix &mB, rank_type i, rank_type j, rank_type k, rank_type gap) {
+        while (gap--) {
+            mut.lock();
+            element += mA.matrix[i][k] * mB.matrix[k][j];
+            mut.unlock();
+            k++;
+        }
+    }
+public:
+    [[maybe_unused]] explicit PMatrix(const Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = m.matrix;
+    }
+    explicit PMatrix(matrix_type m): Matrix(std::move(m)) {}
+    PMatrix operator*(const PMatrix &m) const {
+        matrix_type tmp;
+        if (column == m.row) {
+            for (rank_type i = 0; i < row; ++i) {
+                vector_type v;
+                for (rank_type j = 0; j < m.column; ++j) {
+                    int element = 0;
+                    rank_type gap = std::ceil((double)column / (double)threads_num);
+                    std::vector<std::thread> threads;
+                    for (unsigned long t = 0; t < threads_num; ++t) {
+                        threads.emplace_back(std::thread(_thread, std::ref(element), std::ref(*this), std::ref(m), i, j, t * gap, (column - t * gap >= gap) ? gap : (column - t * gap)));
+                    }
+                    for (std::thread &t : threads) {
+                        t.join();
+                    }
+                    v.push_back(element);
+                }
+                tmp.push_back(v);
+            }
+        }
+        PMatrix result(tmp);
+        return result;
+    }
+};
+
+class Timer {
+private:
+    std::chrono::time_point<std::chrono::steady_clock> _start, _end;
+    std::chrono::duration<double> diff{};
+public:
+    Timer() {
+        _start = std::chrono::steady_clock::now();
+        _end = _start;
+        diff = _end - _start;
+    }
+    void start() {
+        _start = std::chrono::steady_clock::now();
+    }
+    void end() {
+        _end = std::chrono::steady_clock::now();
+        diff = _end - _start;
+    }
+    double time() {
+        return diff.count();
+    }
+};
+
+int main([[maybe_unused]] int argc, [[maybe_unused]] char *argv[]) {
+    std::ifstream mA;
+    mA.open("/Users/gabriel/Desktop/matrix_multiplication/mA.txt", std::ios::in);
+    std::ifstream mB;
+    mB.open("/Users/gabriel/Desktop/matrix_multiplication/mB.txt", std::ios::in);
+    Timer timer;
+    Matrix A;
+    Matrix B;
+    mA >> A;
+    mB >> B;
+    std::cout << "Matrix A:" << std::endl;
+    std::cout << A;
+    std::cout << "Matrix B:" << std::endl;
+    std::cout << B;
+    timer.start();
+    Matrix R = A * B;
+    timer.end();
+    std::cout << "Result:" << std::endl;
+    std::cout << R;
+    std::cout << "Time: " << timer.time() << std::endl;
+    PMatrix pA = (PMatrix)A;
+    PMatrix pB = (PMatrix)B;
+    timer.start();
+    PMatrix pR = pA * pB;
+    timer.end();
+    std::cout << "P Result:" << std::endl;
+    std::cout << pR;
+    std::cout << "Time: " << timer.time() << std::endl;
+    return 0;
+}
+```
+
+I got error messages:
+
+```
+====================[ Build | matrix_multiplication | Debug ]===================
+"/Users/gabriel/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/213.6777.58/CLion.app/Contents/bin/cmake/mac/bin/cmake" --build /Users/gabriel/Desktop/matrix_multiplication/cmake-build-debug --target matrix_multiplication
+[1/2] Building CXX object CMakeFiles/matrix_multiplication.dir/main.cpp.o
+FAILED: CMakeFiles/matrix_multiplication.dir/main.cpp.o 
+/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/c++   -g -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk -std=gnu++17 -MD -MT CMakeFiles/matrix_multiplication.dir/main.cpp.o -MF CMakeFiles/matrix_multiplication.dir/main.cpp.o.d -o CMakeFiles/matrix_multiplication.dir/main.cpp.o -c /Users/gabriel/Desktop/matrix_multiplication/main.cpp
+In file included from /Users/gabriel/Desktop/matrix_multiplication/main.cpp:4:
+/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk/usr/include/c++/v1/thread:286:5: error: attempt to use a deleted function
+    _VSTD::__invoke(_VSTD::move(_VSTD::get<1>(__t)), _VSTD::move(_VSTD::get<_Indices>(__t))...);
+    ^
+/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk/usr/include/c++/v1/__config:856:15: note: expanded from macro '_VSTD'
+#define _VSTD std::_LIBCPP_ABI_NAMESPACE
+              ^
+/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk/usr/include/c++/v1/thread:297:12: note: in instantiation of function template specialization 'std::__thread_execute<std::unique_ptr<std::__thread_struct>, void (*)(int &, PMatrix &, PMatrix &, unsigned long, unsigned long, unsigned long, unsigned long), std::reference_wrapper<int>, std::reference_wrapper<const PMatrix>, std::reference_wrapper<const PMatrix>, unsigned long, unsigned long, unsigned long, unsigned long, 2, 3, 4, 5, 6, 7, 8>' requested here
+    _VSTD::__thread_execute(*__p.get(), _Index());
+           ^
+/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk/usr/include/c++/v1/thread:313:54: note: in instantiation of function template specialization 'std::__thread_proxy<std::tuple<std::unique_ptr<std::__thread_struct>, void (*)(int &, PMatrix &, PMatrix &, unsigned long, unsigned long, unsigned long, unsigned long), std::reference_wrapper<int>, std::reference_wrapper<const PMatrix>, std::reference_wrapper<const PMatrix>, unsigned long, unsigned long, unsigned long, unsigned long>>' requested here
+    int __ec = _VSTD::__libcpp_thread_create(&__t_, &__thread_proxy<_Gp>, __p.get());
+                                                     ^
+/Users/gabriel/Desktop/matrix_multiplication/main.cpp:95:46: note: in instantiation of function template specialization 'std::thread::thread<void (&)(int &, PMatrix &, PMatrix &, unsigned long, unsigned long, unsigned long, unsigned long), std::reference_wrapper<int>, std::reference_wrapper<const PMatrix>, std::reference_wrapper<const PMatrix>, unsigned long &, unsigned long &, unsigned long, unsigned long, void>' requested here
+                        threads.emplace_back(std::thread(_thread, std::ref(element), std::ref(*this), std::ref(m), i, j, t * gap, (column - t * gap >= gap) ? gap : (column - t * gap)));
+                                             ^
+/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk/usr/include/c++/v1/type_traits:1916:5: note: '~__nat' has been explicitly marked deleted here
+    ~__nat() = delete;
+    ^
+1 error generated.
+ninja: build stopped: subcommand failed.
+```
+
+I thought this error caused by using std::thread with a class-method, so I wrote a test program:
+
+```c++
+#include <iostream>
+#include <vector>
+#include <thread>
+
+std::mutex m;
+
+class Test {
+private:
+    int number = 0;
+    int count = 0;
+    static void _thread(int num, int &e, Test &t) {
+        std::cout << num;
+        m.lock();
+        t.count += num;
+        e += num;
+        m.unlock();
+    }
+public:
+    void test() {
+        int e = 0;
+        std::vector<std::thread> threads;
+        for (int i = 0; i < 6; ++i) {
+            threads.emplace_back(std::thread(_thread, i, std::ref(e), std::ref(*this)));
+            number++;
+        }
+        for (std::thread &t : threads)
+            t.join();
+        std::cout << std::endl;
+        std::cout << number << std::endl;
+        std::cout << count << std::endl;
+        std::cout << e << std::endl;
+    }
+};
+
+int main() {
+    Test t;
+    t.test();
+    return 0;
+}
+```
+
+But I got no error with this test program.
+
+TODO:
+
+Looking for how to solve this error.
+
 ## 2022/3/1
 
 Parallelized *for-loop* with Pthreads:
